fixed navbar-collapse bug

--- a/src/css/_misc.scss
+++ b/src/css/_misc.scss
@@ -8,7 +8,7 @@
   height: 3px;
   margin: 20px auto;
 
-  &.spacer {
+  &.wide {
     width: 100px;
   }
 
